2015-01-29  Ilya Tocar  <ilya.tocar@intel.com>

	* config/i386/avx2intrin.h (_mm256_bslli_epi128,
	_mm256_bsrli_epi128): New.
	* config/i386/emmintrin.h (_mm_bsrli_si128, _mm_bslli_si128): Ditto.

2015-01-27  Mikael Pettersson  <mikpelinux@gmail.com>

	Backport from mainline

	2013-09-20  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	PR middle-end/57748
	* expr.c (expand_assignment): Remove misalignp code path.

	2014-01-08  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	PR middle-end/57748
	* expr.h (expand_expr_real, expand_expr_real_1): Add new parameter
	inner_reference_p.
	(expand_expr, expand_normal): Adjust.
	* expr.c (expand_expr_real, expand_expr_real_1): Add new parameter
	inner_reference_p. Use inner_reference_p to expand inner references.
	(store_expr): Adjust.
	* cfgexpand.c (expand_call_stmt): Adjust.

2015-01-26  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2015-01-26  Uros Bizjak  <ubizjak@gmail.com>

	PR target/64795
	* config/i386/i386.md (*movdi_internal): Also check operand 0
	to determine TYPE_LEA operand.
	(*movsi_internal): Ditto.

	Backport from mainline
	2015-01-23  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/sse.md (sse2_loadld): Set attribute isa to sse2 for
	alternative 1.

2015-01-15  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2014-11-27  Richard Biener  <rguenther@suse.de>

	PR middle-end/63704
	* alias.c (mems_in_disjoint_alias_sets_p): Remove assert
	and instead return false when !fstrict-aliasing.

2015-01-14  Renlin Li  <renlin.li@arm.com>

	Backport form mainline
	2014-08-12 Ramana Radhakrishnan <ramana.radhakrishnan@arm.com>

	PR target/61413
	* config/arm/arm.h (TARGET_CPU_CPP_BUILTINS): Fix definition
	of __ARM_SIZEOF_WCHAR_T.

2015-01-13  Pat Haugen  <pthaugen@us.ibm.com>

	Backport from mainline
	2014-12-20  Segher Boessenkool  <segher@kernel.crashing.org>

	PR target/64358
	* config/rs6000/rs6000.c (rs6000_split_logical_inner): Swap the
	input operands if only the second is inverted.